--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -3,8 +3,8 @@
 <p>notas extendidas</p>
 <%= line_chart ExtendedNote.group(:created_at).count %>
 <p>notas extendidas con metodo dia</p>
-<%= line_chart ExtendedNote.group_by_day(:created_at).count %>
+<%= line_chart ExtendedNote.group(:created_at).count %>
 <p>notas extendidas con metodo horas </p>
-<%= line_chart ExtendedNote.group_by_hour(:created_at).count %>
+<%= line_chart ExtendedNote.group(:created_at).count %>
 <p>notas extendidas con metodo minutos </p>
-<%= line_chart ExtendedNote.group_by_minute(:created_at).count %>
+<%= line_chart ExtendedNote.group(:created_at).count %>
