--- a/app/views/extended_notes/index.html.erb
+++ b/app/views/extended_notes/index.html.erb
@@ -41,5 +41,21 @@
 </div>
 
 <br>
+<div class="row center-xs">
+  <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 " >
+      <div class="box">
+        <div class="card z-depth-3 borde-radio-10">
+          <div class="card-content black-text center-xs" >
+            <span class="card-title center" >Matriculas</span>
+<%= pie_chart ExtendedNote.group(:definitiva).count %>
+ </div>
+        </div>
+      </div>
+    </div>
+</div>
 
-<%= link_to 'New Extended Note', new_extended_note_path %>
+
+
