--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,6 +91,9 @@
       <li><%= link_to  "Discipulados", discipleships_path %></li>           
       <li><%= link_to  "Matriculas", enrolls_path %></li>
       <li><%= link_to  "Notas extendidas", extended_notes_path %></li>
+      <li><%= link_to  "Material de apoyo", materials_path %></li>      
+      <li><%= link_to  "Pactos", covenants_path %></li>           
+
 
       
       <li><a href="" class="waves-effect">Docentes</a></li>
@@ -107,6 +110,8 @@
 
   
     <%= yield %>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
+    
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    <script>
