--- a/app/views/covenants/_form.html.erb
+++ b/app/views/covenants/_form.html.erb
@@ -1,3 +1,52 @@
+<div class="row center-xs">
+    <div class="card z-depth-3 borde-radio-10 margin-10">
+    
+    <div id="dia">
+      <div class="card-content padding-10">
+      <span class="card-title">Registrar pacto</span>
+      <%= form_with(model: covenant, local: true) do |form| %>
+  <% if covenant.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(covenant.errors.count, "error") %> prohibited this covenant from being saved:</h2>
+
+      <ul>
+      <% covenant.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :urlMultimedia %>
+    <%= form.file_field :urlMultimedia, id: :covenant_urlMultimedia %>
+  </div>
+
+  <div class="field">
+    <%= form.label :discipleship_id %>
+    <%= form.text_field :discipleship_id, id: :covenant_discipleship_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id, id: :covenant_user_id %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+    </div>
+      
+      <div class="padding-14">
+      
+        
+        
+
+      </div>
+  </div>
+  </div>
+
 <%= form_with(model: covenant, local: true) do |form| %>
   <% if covenant.errors.any? %>
     <div id="error_explanation">
