--- a/app/views/covenants/show.html.erb
+++ b/app/views/covenants/show.html.erb
@@ -1,19 +1,34 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row center-xs">
+    <div class="card z-depth-3 borde-radio-10 col-xs-12 col-sm-8 col-md-6 col-lg-4 no-padding hoverable"> 
+    	<div class="card-content padding-10">
+      	<span class="card-title">Informacion</span>
+      	<div class="row no-margin">
+      		<div class="col-xs-6 left-align"><strong>Discipulado: </strong></div>
+      		<div class="col-xs-6 right-align"><p><%= @covenant.discipleship.nombre%> </p></div>
+      	</div>
+      	<div class="row no-margin">
+      		<div class="col-xs-6 left-align"><strong>Pacto: </strong></div>
+      		<div class="col-xs-6 right-align"><p>no existe</p></div>
+      	</div>
+      	<div class="row no-margin">
+      		<div class="col-xs-6 left-align"><strong>Rango otorgado: </strong></div>
+      		<div class="col-xs-6 right-align"><p><%= @covenant.discipleship.rangoOtorgado%></p></div>
+      	</div>
+      	 
+      		
+				<%= link_to 'Descripcion',  @covenant.urlMultimedia_url , class: "green-text" %>
 
-<p>
-  <strong>Urlmultimedia:</strong>
-  <%= @covenant.urlMultimedia %>
-</p>
+  		</div>
+      <div class="row center-xs no-margin">
+        
+      </div>
+      
+    </div>
+  </div>
+ </div>
 
-<p>
-  <strong>Discipleship:</strong>
-  <%= @covenant.discipleship %>
-</p>
 
-<p>
-  <strong>Student:</strong>
-  <%= @covenant.student %>
-</p>
-
-<%= link_to 'Edit', edit_covenant_path(@covenant) %> |
+<%= link_to 'Edit', edit_covenant_path(@covenant) %>
 <%= link_to 'Back', covenants_path %>
