--- a/app/views/covenants/_form.html.erb
+++ b/app/views/covenants/_form.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :urlMultimedia %>
+    <%= form.label :pdf %>
     <%= form.file_field :urlMultimedia, id: :covenant_urlMultimedia %>
   </div>
 
