--- a/app/views/enrolls/_form.html.erb
+++ b/app/views/enrolls/_form.html.erb
@@ -41,7 +41,7 @@
               <div class="box">
                 <div class="input-field col s12">
                   <%= form.label :cedulaEstudiante, "Cedula del estudiante"%>
-                  <%= form.text_field :cedulaEstudiante, class: "autocomplete", id: "cedulaEstudiante", autocomplete: "off" %>
+                  <%= form.text_field :cedulaEstudiante, class: "autocomplete", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
 
                 </div>
               </div>
@@ -132,22 +132,40 @@
           console.log('entre a la funcion con ajax');
         }
         $('select').formSelect();
-        $(document).ready(function(){
-           var arra={};
+       
+    document.addEventListener('turbolinks:load', function() {
+         var arra={};
           
 
           <%User.all.each do |user|%>
           arra[<%= "#{user.identificacion}"%>]= null;
           <%end%>
-    $('input.autocomplete').autocomplete({
-      data: arra,
-      onAutocomplete: function(){
-        console.log('seleccione algo ', this, ' datos ', $("#cedulaEstudiante").val());
-        update_versions_div($("#cedulaEstudiante").val(),'estudiante')
-      }
+          console.log('estos son los estudiantes ', arra)
+            $('input.autocomplete').autocomplete({
+              data: arra,
+              onAutocomplete: function(){
+                console.log('seleccione algo ', this, ' datos ', $("#enroll_cedulaEstudiante").val());
+                update_versions_div($("#enroll_cedulaEstudiante").val(),'estudiante')
+              }
 
+            });
     });
+  //       $(document).ready(function(){
+  //          var arra={};
+          
 
-  });
+  //         <%User.all.each do |user|%>
+  //         arra[<%= "#{user.identificacion}"%>]= null;
+  //         <%end%>
+  //   $('input.autocomplete').autocomplete({
+  //     data: arra,
+  //     onAutocomplete: function(){
+  //       console.log('seleccione algo ', this, ' datos ', $("#cedulaEstudiante").val());
+  //       update_versions_div($("#cedulaEstudiante").val(),'estudiante')
+  //     }
+
+  //   });
+
+  // });
      
 </script>
