--- a/app/views/extended_notes/index.html.erb
+++ b/app/views/extended_notes/index.html.erb
@@ -1,43 +1,39 @@
-
-
 <div class="container">
 
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+    <div class="box">
+      <div class="card z-depth-3 borde-radio-10">
+        <div class="card-content black-text center-xs" >
+          <span class="card-title center" >Matriculas</span>
+          <table>
+            <thead>
+              <tr>
+                <th>Estudiante</t1h>
+                <th>Definitiva</th>
+                <th>Fecha</th>
+                <th>Idgrupo</th>
+                <th>Discipleship</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
 
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-      <div class="box">
-        <div class="card z-depth-3 borde-radio-10">
-          <div class="card-content black-text center-xs" >
-            <span class="card-title center" >Matriculas</span>
-<table>
-  <thead>
-    <tr>
-      <th>Estudiante</t1h>
-      <th>Definitiva</th>
-      <th>Fecha</th>
-      <th>Idgrupo</th>
-      <th>Discipleship</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @extended_notes.each do |extended_note| %>
-      <tr>
-        <td><%= extended_note.user.identificacion %></td>
-        <td><%= extended_note.definitiva %></td>
-        <td><%= extended_note.created_at %></td>
-        <td><%= extended_note.idGrupo %></td>
-        <td><%= extended_note.discipleship.nombre %></td>
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-  </div>
+            <tbody>
+              <% @extended_notes.each do |extended_note| %>
+                <tr>
+                  <td><%= extended_note.user.identificacion %></td>
+                  <td><%= extended_note.definitiva %></td>
+                  <td><%= extended_note.created_at.to_date %></td>
+                  <td><%= extended_note.idGrupo %></td>
+                  <td><%= extended_note.discipleship.nombre %></td>
+                  
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
-
+  </div>
 </div>
 
 <br>
@@ -50,7 +46,7 @@
         <div class="card z-depth-3 borde-radio-10">
           <div class="card-content black-text center-xs" >
             <span class="card-title center" >Matriculas</span>
-<%= pie_chart ExtendedNote.group(:definitiva).count %>
+<%= pie_chart ExtendedNote.group(:definitiva).count,donut: true %>
  </div>
         </div>
       </div>
