--- a/app/views/enrolls/_form.html.erb
+++ b/app/views/enrolls/_form.html.erb
@@ -41,7 +41,7 @@
               <div class="box">
                 <div class="input-field col s12">
                   <%= form.label :cedulaEstudiante, "Cedula del estudiante"%>
-                  <%= form.text_field :cedulaEstudiante, class: "autocomplete", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
+                  <%= form.text_field :cedulaEstudiante, class: "no-autoinit autocomplete", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
 
                 </div>
               </div>
