--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -21,50 +21,35 @@
             <div class="card z-depth-2 borde-radio-10 hoverable"  >
               <div class="card-content black-text" >
                 <span class="card-title center-xs">Regostrar soporte de pacto</span>
-                	<%= form_with(model: support, local: true) do |f| %>
-                <div class="row around-xs">
-                    
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <div class="box">                               
-                      <div class="input-field">
-                        <i class="material-icons prefix">border_color</i>
-                        <%= f.label :nombre , "Nombre"%>
-                        <%= f.text_field :nombre, id: :discipleship_nombre %>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                    <div class="box">                               
-                      <div class="input-field">
-                        <i class="material-icons prefix">local_offer</i>
-                        <%= f.label :rangoOtorgado ,"Rango otorgado"%>
-                        <%= f.text_field :rangoOtorgado, id: :discipleship_rangoOtorgado %>
-                      </div>
-                    </div>
-                  </div> 
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="box">                               
-                      <div class="input-field">
-                        <i class="material-icons prefix">assignment</i>
-                        <%= f.label :descripcion %>
-                        <%= f.text_area :descripcion, id: :discipleship_descripcion, class: "materialize-textarea" %>
-                      </div>
-                    </div>
-                  </div> 
-                  
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="box">                               
-                      <div class="input-field">
-                        <i class="material-icons prefix">assignment</i>
-                        <%= f.label :descripcionPacto, "Descripcion del compromiso" %>
-                        <%= f.text_area :descripcionPacto, id: :discipleship_descripcionPacto, class: "materialize-textarea" %>
-                      </div>
-                    </div>
-                  </div>    
-                  </div>
+                	<%= form_with(model: @support, local: true) do |form| %>
+                <span class="card-title">Matricula</span>
+		          <div class="row around-xs">
+		            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		              <div class="box">
+		                <div class="input-field col s12" >
+		                
+		                  <%= collection_select(:discipleship,:id,Discipleship.all, :id, :nombre,options = {prompt: "Seleccione"} ,html_options ={onChange: "update_versions_div(this.options[this.selectedIndex].value,'discipleship');"}) %>
+		                  <label>Discipulado</label>
+		                </div>   
+		              </div>
+		            </div>
+		            
+		            
+		            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		              <div class="box">
+		                <div class="input-field col s12">
+		                  <%= form.label :cedulaEstudiante, "Cedula del estudiante"%>
+		                  <%= form.text_field :cedulaEstudiante, class: "autocomplete-input", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
+
+		                </div>
+		              </div>
+		            </div>
+		          </div>
+
+          
                   <div class="actions ">
                     
-                    <%= f.submit "Aceptar",class: "btn  waves-light  borde-radio-5" %>
+                    <%= form.submit "Aceptar",class: "btn  waves-light  borde-radio-5" %>
                     <br><br>
                     
                     
@@ -89,3 +74,55 @@
 <%= render 'form', support: @support %>
 
 <%= link_to 'Back', supports_path %>
+<script type="text/javascript">
+	function update_versions_div(discipleship_i,combo) { 
+
+          jQuery.ajax({
+            url: "/cargar_grupos",
+            type: "GET",
+            data: {discipleship_id: discipleship_i,combo: combo},
+            dataType: "html",
+            success: (datos)=> {
+              //--------------------------------------------------------
+              if (combo=='grupo') {
+                console.log('esto tiene datos', datos)
+              jQuery("#horario").html(datos);
+
+              }
+              if(combo=='discipleship'){
+
+                jQuery("#comboGrupo").html(datos);
+                jQuery("#horario").html(null);
+
+              }
+              if(combo=='estudiante'){
+                jQuery("#estudiante").html(datos);
+                
+
+              }
+              
+            }
+          });
+           $('select').formSelect();
+           
+          console.log('entre a la funcion con ajax');
+        }
+	document.addEventListener('turbolinks:load', function() {
+		$('select').formSelect();
+         var arra={};
+          
+
+          <%User.all.each do |user|%>
+          arra[<%= "#{user.identificacion}"%>]= null;
+          <%end%>
+          console.log('estos son los estudiantes ', arra)
+            $('input.autocomplete').autocomplete({
+              data: arra,
+              onAutocomplete: function(){
+                console.log('seleccione algo ', this, ' datos ', $("#enroll_cedulaEstudiante").val());
+                update_versions_div($("#enroll_cedulaEstudiante").val(),'estudiante')
+              }
+
+            });
+    });
+</script>
