--- a/app/views/covenants/index.html.erb
+++ b/app/views/covenants/index.html.erb
@@ -8,25 +8,25 @@
         <table>
   <thead>
     <tr>
-      <th>Identificacion</th>
       <th>Nombre</th>
-      <th>Pacto</th>
+      <th>Discipulado</th>
+      <th>Detalle</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @covenants.each do |covenan| %>
-      <% covenan.users do |covenant|%>
+    <% @covenants.each do |covenant| %>
+      
         <tr>
-          <td><%= covenant.user.identificacion%></td>
-          <td><%= covenant.user.nombre_completo %></td>
-          <td><%= covenant.discipleship.rangoOtorgado %></td>
+          <td><%= covenant.discipleship.rangoOtorgado%></td>
+          <td><%= covenant.discipleship.nombre%></td>
+          <td>detalle</td>
           <td><%= link_to 'Show', covenant %></td>
           <td><%= link_to 'Edit', edit_covenant_path(covenant) %></td>
           <td><%= link_to 'Destroy', covenant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
-      <% end %>
+      
     <% end %>
   </tbody>
 </table>
