--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -10,33 +10,9 @@
   </ul>
 </div>
 
-  <div class="container">
-    <div class="row center-xs " >
-      <% @supports.each do |support| %>
-        <div class="col-xs-12
-                    col-sm-8
-                    col-md-6
-                    col-lg-4 ">
-          <div class="box">
-            <div class="card z-depth-2 borde-radio-10 hoverable"  >
-              <div class="card-content black-text" >
-                <span class="card-title center-xs"><%=support.user.nombre_completo%></span>
-                <p  class="truncate"><%=support.descripcion%></p>
-                
-                <div class="actions center">
-                  <%= link_to  "Ver detalles", support, class: "waves-effect waves-teal btn-flat " %>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <%end%>
-    </div>
-  </div>   
 
 
-
-<h1>Supports</h1>
+<h1>Soportes</h1>
 
 <table>
   <thead>
