--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -20,7 +20,7 @@
           <div class="box">
             <div class="card z-depth-2 borde-radio-10 hoverable"  >
               <div class="card-content black-text" >
-                <span class="card-title center-xs">Regostrar soporte de pacto</span>
+                <span class="card-title center-xs">Registrar soporte de pacto</span>
                 	<%= form_with(model: @support, local: true) do |form| %>
                 <span class="card-title">Matricula</span>
 		          <div class="row around-xs">
@@ -39,7 +39,7 @@
 		              <div class="box">
 		                <div class="input-field col s12">
 		                  <%= form.label :cedulaEstudiante, "Cedula del estudiante"%>
-		                  <%= form.text_field :cedulaEstudiante, class: "autocomplete-input", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
+		                  <%= form.text_field :cedulaEstudiante, class: "no-autoinit autocomplete", id: "enroll_cedulaEstudiante", autocomplete: "off" %>
 
 		                </div>
 		              </div>
