--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -24,8 +24,120 @@
         	<section class="fondo">
         		<h4>Imagen de la publicacion</h4>
         	</section>
-          <span class="card-title verdeBri-text">Publicacion</span>
-          <p>Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+<div class="row center-xs">
+    <div class="col-xs-12 col-lg-6">
+      <div class="card borde-radio-8">
+        <div class="card-content" >
+          <section class="fondo">
+            <h4>Imagen de la publicacion</h4>
+          </section>
+          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
+          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
         </div>
         
       </div>
